--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-flick-front",
+  "name": "weather-flick-admin-front",
   "version": "0.0.0",
   "private": true,
   "type": "module",
