--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-VITE_API_BASE_URL=https://your-api-server-url.com
+# API 서버 기본 URL
+VITE_API_BASE_URL=http://localhost:8000
+
+# 개발 환경에서는 localhost를 사용하고,
+# 프로덕션 환경에서는 실제 서버 URL로 변경하세요
+# 예: VITE_API_BASE_URL=https://api.weatherflick.com
