chore: env 설정 템플릿 수정 및 린트 수정

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,32 @@
+# Weather Flick Admin Frontend Environment Variables
+# Copy this file to .env and fill in the values
+
+# Backend API URL
 VITE_API_BASE_URL=http://localhost:9000
+
+# Application Environment
+VITE_APP_ENV=development
+
+# Application Name
+VITE_APP_NAME="Weather Flick Admin"
+
+# Google Maps API Key (for location visualization)
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Feature Flags
+VITE_ENABLE_ANALYTICS=false
+VITE_ENABLE_DEBUG_MODE=true
+
+# Session Timeout (minutes)
+VITE_SESSION_TIMEOUT=30
+
+# API Request Timeout (milliseconds)
+VITE_API_TIMEOUT=30000
+
+# Date Format
+VITE_DATE_FORMAT=YYYY-MM-DD
+VITE_DATETIME_FORMAT=YYYY-MM-DD HH:mm:ss
+
+# Pagination
+VITE_DEFAULT_PAGE_SIZE=20
+VITE_MAX_PAGE_SIZE=100
