--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "tailwindcss": "^4.1.10",
     "zod": "^3.25.67"
   },
+  "engines": {
+    "node": "22.x.x",
+    "npm": ">=10.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^18.3.16",
