--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.522.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
