--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@playwright/test": "^1.54.0",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -69,8 +70,10 @@
     "prettier": "^3.5.3",
     "prettier-plugin-packagejson": "^2.5.15",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tw-animate-css": "^1.3.4",
     "vite": "^6.3.5",
+    "vite-plugin-compression": "^0.5.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
