--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.58.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
@@ -65,6 +66,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-packagejson": "^2.5.15",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "terser": "^5.43.1",
     "tw-animate-css": "^1.3.4",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
