--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "core-js": "^3.44.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
@@ -51,6 +52,11 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/runtime": "^7.27.6",
     "@eslint/js": "^9.25.0",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.2",
