--- a/.babelrc
+++ b/.babelrc
@@ -5,14 +5,14 @@
       {
         "targets": {
           "browsers": [
+            "> 1%",
             "last 2 versions",
-            "safari >= 12",
-            "chrome >= 60",
-            "firefox >= 60"
+            "not ie <= 11"
           ]
         },
         "useBuiltIns": "entry",
-        "corejs": 3
+        "corejs": 3,
+        "modules": false
       }
     ],
     [
@@ -23,6 +23,13 @@
     ]
   ],
   "plugins": [
-    "@babel/plugin-transform-runtime"
+    ["@babel/plugin-transform-runtime", {
+      "corejs": false,
+      "helpers": true,
+      "regenerator": true,
+      "useESModules": true
+    }],
+    "@babel/plugin-transform-class-properties",
+    "@babel/plugin-transform-classes"
   ]
 }
