--- a/.babelrc
+++ b/.babelrc
@@ -4,11 +4,7 @@
       "@babel/preset-env",
       {
         "targets": {
-          "browsers": [
-            "> 1%",
-            "last 2 versions",
-            "not ie <= 11"
-          ]
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 11"]
         },
         "useBuiltIns": "entry",
         "corejs": 3,
@@ -23,12 +19,15 @@
     ]
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime", {
-      "corejs": false,
-      "helpers": true,
-      "regenerator": true,
-      "useESModules": true
-    }],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": false,
+        "helpers": true,
+        "regenerator": true,
+        "useESModules": true
+      }
+    ],
     "@babel/plugin-transform-class-properties",
     "@babel/plugin-transform-classes"
   ]
